--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Restaurant</title>
+        <title>Kendo Shisha Lounge | Homepage</title>
+        <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
         <link rel="stylesheet" href="styles.css" />
         <script
             src="https://kit.fontawesome.com/cb4fcb82c0.js"
