--- a/index.html
+++ b/index.html
@@ -142,5 +142,62 @@
         </div>
 
         <script src="script.js"></script>
+        <!-- Your other HTML content -->
+        <script>
+            // Check if the browser supports the history API
+            if (window.history && window.history.pushState) {
+                // Remove .html extension from the URL when a link is clicked
+                const links = document.querySelectorAll('a[href$=".html"]');
+                links.forEach((link) => {
+                    link.addEventListener("click", function (event) {
+                        event.preventDefault();
+                        const url = link
+                            .getAttribute("href")
+                            .replace(".html", "");
+                        window.history.pushState(null, null, url);
+                        loadPage(url);
+                    });
+                });
+
+                // Handle the browser back/forward buttons
+                window.addEventListener("popstate", function (event) {
+                    loadPage(location.pathname);
+                });
+            }
+
+            // Function to load the page content without a refresh
+            function loadPage(url) {
+                const xhr = new XMLHttpRequest();
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === XMLHttpRequest.DONE) {
+                        if (xhr.status === 200) {
+                            document.documentElement.innerHTML =
+                                xhr.responseText;
+                            // Re-run the script to set up the event listeners for the new content
+                            evalScripts();
+                        } else {
+                            console.error("Failed to load the page: " + url);
+                        }
+                    }
+                };
+                xhr.open("GET", url + ".html", true);
+                xhr.send();
+            }
+
+            // Function to re-evaluate scripts after content is loaded
+            function evalScripts() {
+                const scripts = document.querySelectorAll("script");
+                scripts.forEach((script) => {
+                    const newScript = document.createElement("script");
+                    newScript.textContent = script.textContent;
+                    script.parentNode.replaceChild(newScript, script);
+                });
+            }
+
+            // Initial load for the homepage
+            if (window.location.pathname === "/") {
+                loadPage("/index");
+            }
+        </script>
     </body>
 </html>
