--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kendo Shisha Lounge | Homepage</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
-        <link rel="stylesheet" href="styles.css" />
+        <!-- <link rel="stylesheet" href="styles.css" /> -->
+        <link rel="stylesheet" href="style.css" />
         <script
             src="https://kit.fontawesome.com/cb4fcb82c0.js"
             crossorigin="anonymous"
@@ -26,7 +27,7 @@
                         <img
                             src="Images/Kendo Lounge Logo.jpg"
                             alt="Kendo Shisha Lounge Logo"
-                            class="logo"
+                            class="logo large-logo"
                         />
                     </a>
                 </div>
