--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Menükarte | Kendo Shisha Lounge</title>
-        <link rel="stylesheet" href="styles_menu.css" />
+        <!-- <link rel="stylesheet" href="styles_menu.css" /> -->
+        <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
         <script
             src="https://kit.fontawesome.com/cb4fcb82c0.js"
