Menu design adjusted

--- a/menu.html
+++ b/menu.html
@@ -23,18 +23,44 @@
     </head>
     <body>
         <nav id="navbar">
-            <a href="index.html" class="homepage">
+            <a href="index.html" class="homepage nav-icon">
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
             <a href="index.html">
                 <img
                     src="Images/Kendo Lounge Logo.jpg"
                     alt="Kendo Shisha Lounge Logo"
-                    class="logo"
+                    class="logo nav-logo"
                 />
             </a>
-            <span><i class="fa-solid fa-bars menu-toggle"></i></span>
+            <span class="menu-toggle nav-icon">
+                <i class="fa-solid fa-bars"></i>
+            </span>
         </nav>
+
+        <main>
+            <h2 class="menu-heading">Unser Menü</h2>
+            <div class="categories-container">
+                <div class="categories"></div>
+            </div>
+        </main>
+
+        <section class="category-items">
+            <div class="category-header">
+                <!-- <h2 class="category-items-heading">Shishas</h2>
+                <p class="category-items-subheading">
+                    Eisschlauch gibt es für 2.00€ extra.
+                </p> -->
+            </div>
+
+            <div class="category-item">
+                <!-- <div class="item-container">
+                    <h3 class="category-item-name">Traube Minze</h3>
+                    <p class="category-item-price">€15.00</p>
+                </div>
+                <p class="zusatzstoffe">Zusatzstoffe: 1,2,3,4</p> -->
+            </div>
+        </section>
 
         <div class="menu-modal">
             <div class="menu-modal-content">
@@ -50,7 +76,7 @@
                     />
                 </a>
                 <div class="container">
-                    <div class="card-content">
+                    <div class="card-content menu-card">
                         <a
                             href="https://g.page/r/CRBuUh5qxjjeEAg/review"
                             class="card-text"
@@ -64,7 +90,7 @@
                             <i class="fa-solid fa-chevron-right"></i>
                         </span>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content menu-card">
                         <a href="tel: 08231 9249059" class="card-text">
                             <span class="icon">
                                 <i class="fa-solid fa-phone modal-icon"></i>
@@ -91,30 +117,6 @@
             </div>
         </div>
         <div class="modal-backdrop"></div>
-
-        <main>
-            <h2 class="heading">Unser Menü</h2>
-            <div class="categories-container">
-                <div class="categories"></div>
-            </div>
-        </main>
-
-        <section class="category-items">
-            <div class="category-header">
-                <!-- <h2 class="category-items-heading">Shishas</h2>
-                <p class="category-items-subheading">
-                    Eisschlauch gibt es für 2.00€ extra.
-                </p> -->
-            </div>
-
-            <div class="category-item">
-                <!-- <div class="item-container">
-                    <h3 class="category-item-name">Traube Minze</h3>
-                    <p class="category-item-price">€15.00</p>
-                </div>
-                <p class="zusatzstoffe">Zusatzstoffe: 1,2,3,4</p> -->
-            </div>
-        </section>
 
         <footer class="footer">
             <div class="social-media_container">
