Footer links updated

--- a/menu.html
+++ b/menu.html
@@ -105,10 +105,16 @@
 
                 <footer class="footer">
                     <div class="social-media_container">
-                        <a href="#" class="social-media">
+                        <a
+                            href="https://www.instagram.com/kendolounge/"
+                            class="social-media"
+                        >
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="#" class="social-media">
+                        <a
+                            href="https://goo.gl/maps/euN5YTYUv6HjjFXMA"
+                            class="social-media"
+                        >
                             <i class="fa-solid fa-location-dot"></i>
                         </a>
                     </div>
@@ -120,10 +126,16 @@
 
         <footer class="footer">
             <div class="social-media_container">
-                <a href="#" class="social-media">
+                <a
+                    href="https://www.instagram.com/kendolounge/"
+                    class="social-media"
+                >
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="social-media">
+                <a
+                    href="https://goo.gl/maps/euN5YTYUv6HjjFXMA"
+                    class="social-media"
+                >
                     <i class="fa-solid fa-location-dot"></i>
                 </a>
             </div>
