Meta Description added to index and menu

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            description="Kendo Lounge ist wohl die beste Lounge in Augsburg und Umgebung. Wir bieten eine große Auswahl an Shishas und Getränken. Komm vorbei und genieße unsere Shishas."
+        />
         <title>Kendo Shisha Lounge | Homepage</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
         <!-- <link rel="stylesheet" href="styles.css" /> -->
