--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Menükarte | Kendo Shisha Lounge</title>
+        <meta
+            description="Kendo Lounge - Entdecken Sie unsere große Auswahl an Shishas, Aromen und Getränken. Wir bieten Ihnen den perfekten Ort, um sich mit Freunden und Familie zu entspannen."
+        />
+        <title>Kendo Shisha Lounge | Menükarte</title>
         <!-- <link rel="stylesheet" href="styles_menu.css" /> -->
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
