Meta Description adjusted index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
-            description="Kendo Lounge ist wohl die beste Lounge in Augsburg und Umgebung. Wir bieten eine große Auswahl an Shishas und Getränken. Komm vorbei und genieße unsere Shishas."
+            description="Kendo Lounge ist eine gemütliche Shisha-Lounge in Augsburg. Wir bieten eine große Auswahl an Shishas, Getränken und Snacks. Besuchen Sie uns noch heute und entspannen Sie sich bei einer Shisha in unserer gemütlichen Atmosphäre."
         />
         <title>Kendo Shisha Lounge | Homepage</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
