Überschrift geändert, Keywords hinzugefügt, Beschreibung geändert.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
-            description="Kendo Lounge ist eine gemütliche Shisha-Lounge in Augsburg. Wir bieten eine große Auswahl an Shishas, Getränken und Snacks. Besuchen Sie uns noch heute und entspannen Sie sich bei einer Shisha in unserer gemütlichen Atmosphäre."
+            description="In der Kendo Lounge in Königsbrunn bei Augsburg kannst du dich entspannen und in geselliger Runde Shisha rauchen, Cocktails genießen und leckere Snacks essen."
         />
-        <title>Kendo Shisha Lounge | Homepage</title>
+        <meta
+            name="keywords"
+            content="Shisha Lounge Königsbrunn, Shisha Bar Augsburg, Shisha Lounge Augsburg, Cocktail Lounge Königsbrunn, Shisha, Cocktails, Chillout, Königsbrunn, Augsburg"
+        />
+
+        <title>KENDO Lounge | Shisha Lounge Königsbrunn</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
         <!-- <link rel="stylesheet" href="styles.css" /> -->
         <link rel="stylesheet" href="style.css" />
