--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         />
         <meta
             name="keywords"
-            content="Shisha Lounge Königsbrunn, Shisha Bar Augsburg, Shisha Lounge Augsburg, Cocktail Lounge Königsbrunn, Shisha, Cocktails, Chillout, Königsbrunn, Augsburg"
+            content="Shisha Lounge Königsbrunn, Shisha Bar Königsbrunn, Shisha Bar Augsburg, Shisha Lounge Augsburg, Cocktail Lounge Königsbrunn, Shisha, Cocktails, Chillout, Königsbrunn, Augsburg"
         />
 
         <title>KENDO Lounge | Shisha Lounge Königsbrunn</title>
