Keywords bei Menu eingefügt

--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,11 @@
         <meta
             description="Kendo Lounge - Entdecken Sie unsere große Auswahl an Shishas, Aromen und Getränken. Wir bieten Ihnen den perfekten Ort, um sich mit Freunden und Familie zu entspannen."
         />
-        <title>Kendo Shisha Lounge | Menükarte</title>
+        <meta
+            name="keywords"
+            content="Shisha Lounge Königsbrunn, Shisha Bar Königsbrunn, Shisha Bar Augsburg, Shisha Lounge Augsburg, Cocktail Lounge Königsbrunn, Chillout Lounge, Shisha, Cocktails, Chillout, Königsbrunn, Augsburg"
+        />
+        <title>KENDO Lounge | Menükarte</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="Images/favicon-16x16.png" />
         <script
