Meta Description korriegiert.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
-            description="In der Kendo Lounge in Königsbrunn bei Augsburg kannst du dich entspannen und in geselliger Runde Shisha rauchen, Cocktails genießen und leckere Snacks essen."
+            name="description"
+            content="In der Kendo Lounge in Königsbrunn bei Augsburg kannst du dich entspannen und in geselliger Runde Shisha rauchen, Cocktails genießen und leckere Snacks essen."
         />
         <meta
             name="keywords"
