--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
-            description="Kendo Lounge - Entdecken Sie unsere große Auswahl an Shishas, Aromen und Getränken. Wir bieten Ihnen den perfekten Ort, um sich mit Freunden und Familie zu entspannen."
+            name="description"
+            content="Kendo Lounge - Entdecken Sie unsere große Auswahl an Shishas, Aromen und Getränken. Wir bieten Ihnen den perfekten Ort, um sich mit Freunden und Familie zu entspannen."
         />
         <meta
             name="keywords"
