Inhaber hinzugefügt, Shishas bearbeitet

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </div>
                 <div class="heading-container">
                     <h1 class="heading">Kendo Shisha Lounge</h1>
+                    <span class="inhaber">Inhaber: Maxwell Jegel</span>
                     <h3 class="subheading">
                         Willkommen in der Kendo Shisha Lounge
                     </h3>
